k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp-svc
  spec:
    selector:
      app: go-webapp
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
    type: ClusterIP
